fixed card and button overflow and resizing

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,14 @@ button {
 .card .btn {
   width: 100%;
   margin-bottom: 10px;
+  white-space: normal; /* enables word wrapping */
+  line-height: 1.4;
+}
+.card .btn:nth-child(4) {
+  margin-bottom: 50px;
 }
 .card {
-  min-height: 335px;
+  min-height: 450px;
   margin-bottom: 10px;
   box-shadow: 1px 2px 2px #666;
   border-radius: 4px;
